# uuid-v4-cli

./: Cargo.toml  README.md  wapm.toml
.github/workflows/: rust.yml
src/: lib.rs  main.rs
