[package]
name = "uuid-v4-cli"
version = "0.3.0"
edition = "2021"
authors = ["Ken Matsui <26405363+ken-matsui@users.noreply.github.com>"]
description = "A CLI tool to generate UUID V4"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ken-matsui/uuid-v4-cli/"
homepage = "https://github.com/ken-matsui/uuid-v4-cli#readme"
documentation = "https://docs.rs/uuid-v4-cli"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.4", features = ["v4"] }

[dev-dependencies]
inline-c = "0.1"

[build-dependencies]
cbindgen = "0.26"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "uuid"
path = "src/main.rs"
